Tidied index page. Changed font to Verdana. Fixed main heading text size and colour.  Made menubar more like original. Fixed word wrapping/overflowing issue for good. In-page headings now are better sized and have top and bottom border.

--- a/fhstyle.css
+++ b/fhstyle.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
     width: 100%;
     max-width: 100%;
 }
@@ -6,13 +7,13 @@ body, html {
 body {
     padding-right: 0px;
     padding-left: 0px;
-    font-size: 110%;
+    font-size: 1em;
     padding-bottom: 0px;
     margin: 0px;
     color: #000000;
     padding-top: 0px;
-    font-family: "Trebuchet MS", sans-serif;
-    background-color: #FFEFD9;
+    font-family: Verdana, Arial, sans-serif;
+    background-color: #ffefd9;
 }
 
 .fhcontent {
@@ -22,7 +23,7 @@ body {
 
 #menubar {
     padding: 0.25em;
-    background-color: #FF7939;
+    background-color: #ff7939;
     margin-bottom: 1.5em;
     font-weight: bold;
     overflow: hidden;
@@ -42,17 +43,30 @@ body {
 }
 
 #menubar a {
-    color: black;
     text-decoration: none;
+    font-size: 0.8em;
+    font-variant: small-caps;
+    color: #0000ff;
+    line-height: 1.5em;
+    letter-spacing: 1px;
+}
+
+#menubar a:hover {
+    text-decoration: underline;
+}
+
+a:hover {
+    opacity: 0.8;
 }
 
 p {
     line-height: 1.5;
     margin-block-start: 0em;
     margin-block-end: 0.5em;
-    word-wrap: break-word;
     word-break: break-word;
+    overflow-wrap: break-word;
     hyphens: auto;
+    font-size: 1.1em;
 }
 
 .fhimgwrap p {
@@ -78,17 +92,37 @@ p {
 }
 
 #header h1 {
-    font-size: x-large;
+    font-size: 1.5em;
+    font-weight: normal;
     margin-top: 0;
     margin-bottom: 0;
+    margin-left: 0.25em;
+    color: #004080;
 }
 
-.fhcontent h1 {
-    font-size: large;
+.fhcontent h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    clear: both;
+    height: auto;
+    font-size: 22pt;
+    font-weight: 700;
+    border-style: solid;
+    border-top-width: 1pt;
+    border-right-width: 0px;
+    border-bottom-width: 1pt;
+    border-left-width: 0px;
+    margin-top: 2em;
+    margin-bottom: 1em;
+    font-family: "Trebuchet MS";
+    color: #000000;
 }
 
 .FhSiteTitle {
-    font-size: x-large;
+    font-size: xx-large;
     font-weight: bold;
     text-align: center;
     margin-bottom: 1em;
@@ -177,7 +211,7 @@ img {
     min-height: 350px;
 }
 
-@media screen and (min-width: 480px) /* responsive layout - wide */ {
+@media screen and (min-width: 480px) /* if layout is desktop */ {
     .fhresponsive ul.table-border li {
         border: thin solid black;
     }
@@ -195,7 +229,13 @@ img {
         gap: 0 !important;
         clear: right;
     }
-    
+    #header h1 {
+        font-size: 2em;
+    }
+
+    p {
+        font-size: 1em;
+    }
 }
 
 .fhimgcolumn {
@@ -204,21 +244,16 @@ img {
     flex-direction: row;
     gap: 1em;
     justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
     margin-left: 1em;
 }
 
 a {
-    color: grey;
+    color: #0000a0;
 }
 
 .fhstdtable {
     min-width: 15em;
-}
-
-.FhHdg1 {
-    margin-bottom: 1em;
 }
 
 .b {
@@ -232,4 +267,43 @@ a {
 }
 .s {
     text-decoration: line-through;
+}
+
+.FhPageTitleCentred {
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-bottom: 1em;
+}
+
+.FhIndexPage {
+    text-align: center;
+    font-weight: bold;
+    text-decoration: none;
+    color: #e9e9e9;
+    margin-bottom: 1em;
+}
+.FhIndexPage a {
+    color: #808080;
+    text-decoration: none;
+}
+.FhIndexPage a:hover {
+    color: black;
+    text-decoration: none;
+}
+.FhIndexList {
+    margin-bottom: 2em;
+}
+.FhIndexList p {
+    padding: 0px;
+    margin: 0px;
+}
+.FhIndexList ul {
+    list-style: none;
+    text-align: left;
+}
+.FhIndexList a {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-decoration: none;
 }
